Fixed horizontal overflow issue of skill section

--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,13 @@ body {
   
 }
 
-.skill-grid{
+/* .skill-grid{
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   
-}
+} */
 
 .accordion-button .center-align-text {
   text-align: center;
